--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -37,7 +37,7 @@ interlinks:
     #   inv: objects-test.txt
 
 website:
-  title: "munch-group-template"
+  title: "primate-accel-reg"
   page-navigation: true
   navbar:
     left:
@@ -47,7 +47,7 @@ website:
         text: API reference
     right:
       - icon: github
-        href: https://github.com/munch-group/munch-group-template/
+        href: https://github.com/munch-group/primate-accel-reg/
   sidebar:
     - id: pages
       title: Get Started
@@ -74,7 +74,7 @@ format:
 quartodoc:
   style: pkgdown
   dir: api
-  package: munch_group_template
+  package: primate_accel_reg
   render_interlinks: true
   options:
     signature_name: full
@@ -86,13 +86,13 @@ quartodoc:
 
   sections:
     - title: Some section
-      package: munch_group_template.modulename
+      package: primate_accel_reg.modulename
       desc: |
         Some description...
       contents:
         - functionname
     - title: Some other section
-      package: munch_group_template.modulename
+      package: primate_accel_reg.modulename
       desc: |
         Some description...
       contents:
